--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,6 @@
+teste
+
+
 ofxparse==0.14
 suds_requests
 pytrustnfe
@@ -7,3 +10,7 @@ python-cnab
 python-boleto
 http://xmlsoft.org/sources/python/libxml2-python-2.6.21.tar.gz
 https://github.com/odoo-brazil/pyxmlsec/archive/master.zip
+
+
+
+teste
